--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
   "rewrites": [
-    {"source": "/(.*)","destination": "/"}
+    { "source": "/old-cv", "destination": "/PichkunthaiCV.html" }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "X-Frame-Options", "value": "DENY" }
+      ]
+    }
   ]
 }
